<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.priscilacortez.ipdroidcamera.DeviceSelectActivity">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarThemeDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGray"
                android:paddingBottom="@dimen/horizontal_padding"
                android:paddingTop="@dimen/horizontal_padding"
                android:paddingRight="@dimen/vertical_padding"
                android:paddingLeft="@dimen/vertical_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bluetooth"
                    style="@style/title"
                    android:layout_alignParentTop="true"/>

                <Switch
                    android:id="@+id/switch_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:switchTextAppearance="@style/switchTextAppearance"
                    android:textOn="@string/on"
                    android:textOff="@string/off"
                    android:switchPadding="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectDevice"
                style="@style/title"
                android:paddingLeft="@dimen/horizontal_padding"
                android:paddingRight="@dimen/horizontal_padding"
                android:paddingTop="@dimen/vertical_padding"
                android:paddingBottom="@dimen/vertical_padding"/>


            <TextView
                android:id="@+id/tv_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pairedDevices"
                style="@style/subtitle"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <ListView
                android:id="@+id/lv_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content."></ListView>

            <TextView
                android:id="@+id/tv_available_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availableDevices"
                style="@style/subtitle"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <ListView
                android:id="@+id/lv_available_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
</LinearLayout>
