<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.priscilacortez.ipdroidcamera.DeviceSelectActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDevice"
            style="@style/title"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:paddingTop="@dimen/vertical_padding"
            android:paddingBottom="@dimen/vertical_padding"/>


        <TextView
            android:id="@+id/tv_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pairedDevices"
            style="@style/subtitle"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <ListView
            android:id="@+id/lv_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

        <TextView
            android:id="@+id/tv_available_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availableDevices"
            style="@style/subtitle"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <ListView
            android:id="@+id/lv_available_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>
</LinearLayout>
